--- a/RealmeyeIdentity/wwwroot/css/main.css
+++ b/RealmeyeIdentity/wwwroot/css/main.css
@@ -21,7 +21,7 @@ input {
         outline: none;
     }
 
-button {
+.btn {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.36em;
     border: 0;
@@ -31,31 +31,36 @@ button {
     padding: 12px 14px;
 }
 
-    button:hover {
+    .btn:hover {
         cursor: pointer;
         background: #2b91d5;
     }
 
-    button:active {
+    .btn:active {
         cursor: pointer;
         background: #007acc;
     }
 
-    button.secondary {
+    .btn.secondary {
         border: 2px solid #459eda;
         background: #ffffff;
         color: #459eda;
     }
 
-        button.secondary:hover {
+        .btn.secondary:hover {
             cursor: pointer;
             background: #00000010;
         }
 
-        button.secondary:active {
+        .btn.secondary:active {
             cursor: pointer;
             background: #0000001f;
         }
+
+a.btn {
+    text-align: center;
+    text-decoration: none;
+}
 
 .main-container {
     max-width: 700px;
@@ -89,7 +94,7 @@ button {
     margin: 36px 0 0 0;
 }
 
-    .form-field > span {
+    .form-field > label {
         font-size: 0.6em;
         color: #000000a0;
         position: absolute;
