--- a/RealmeyeIdentity/wwwroot/css/main.css
+++ b/RealmeyeIdentity/wwwroot/css/main.css
@@ -91,7 +91,7 @@ a.btn {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 36px 0 0 0;
+    margin: 1.28em 0 0 0;
 }
 
     .form-field > label {
@@ -106,5 +106,5 @@ a.btn {
     display: flex;
     flex-direction: column;
     gap: 20px 0;
-    margin: 72px 0 0 0;
+    margin: 2.6em 0 0 0;
 }
