ui/ux changes: styles; validation and error messages; ui code timer and auto reload on expire

--- a/RealmeyeIdentity/Views/Authentication/ChangePassword.cshtml
+++ b/RealmeyeIdentity/Views/Authentication/ChangePassword.cshtml
@@ -6,20 +6,21 @@
 
 <form asp-action="ChangePassword" asp-route-redirectUri="@ViewData["RedirectUri"]" class="main-form">
     <div class="form-field">
-        <input asp-for="Name" type="text" placeholder="In-game name" />
+        <label>RotMG name</label>
+        <input asp-for="Name" type="text" />
         <span asp-validation-for="Name"></span>
     </div>
     <div class="form-field">
-        <input asp-for="OldPassword" type="password" placeholder="Old password" />
+        <label>Old password</label>
+        <input asp-for="OldPassword" type="password" />
         <span asp-validation-for="OldPassword"></span>
     </div>
     <div class="form-field">
-        <input asp-for="NewPassword" type="password" placeholder="New password" />
+        <label>New password</label>
+        <input asp-for="NewPassword" type="password" />
         <span asp-validation-for="NewPassword"></span>
     </div>
     <div class="form-buttons">
         <button type="submit" class="btn">Login</button>
-        <a asp-action="Login"
-           asp-route-redirectUri="@ViewData["RedirectUri"]">Back to login</a>
     </div>
 </form>
