add password confirmation; register name with exact case from realmeye; case-insensitive name lookup; add title style for small screens; add register link to login name not found message

--- a/RealmeyeIdentity/Views/Authentication/ChangePassword.cshtml
+++ b/RealmeyeIdentity/Views/Authentication/ChangePassword.cshtml
@@ -20,6 +20,11 @@
         <input asp-for="NewPassword" type="password" />
         <span asp-validation-for="NewPassword"></span>
     </div>
+    <div class="form-field">
+        <label>Confirm password</label>
+        <input asp-for="PasswordConfirmation" type="password" />
+        <span asp-validation-for="PasswordConfirmation"></span>
+    </div>
     <div class="form-buttons">
         <button type="submit" class="btn">Login</button>
     </div>
