--- a/RealmeyeIdentity/wwwroot/css/main.css
+++ b/RealmeyeIdentity/wwwroot/css/main.css
@@ -98,11 +98,28 @@ a.btn {
     text-align: center;
 }
 
+    .main-logo > img {
+        width: 192px;
+        height: 192px;
+    }
+
 .main-title {
     font-size: 42px;
     font-weight: 700;
     text-align: center;
     margin: 30px 0 80px 0;
+}
+
+@media (max-width: 576px) {
+    .main-logo > img {
+        width: 120px;
+        height: 120px;
+    }
+
+    .main-title {
+        font-size: 27px;
+        margin: 18px 0 52px 0;
+    }
 }
 
 .main-form {
